# postcode-lookup-generator

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  utils.py
app/domain/: postcode_lookup_csv_writer.py  postcode_lookup_sqlite_writer.py  postcode_lookup_writer.py  postcodes.py
app/scripts/: generate_csv.py  generate_sqlite.py  load_postcodes.py
data/2024-01-28/: README.md  mysociety_2025_constituencies.csv  mysociety_2025_constituencies_boundaries.gpkg  mysociety_2025_postcodes_with_constituencies.csv
data/2024-01-28/ONS_UPRN_lookup/: NSUL_JAN_2024_EE.csv  NSUL_JAN_2024_EM.csv  NSUL_JAN_2024_LN.csv  NSUL_JAN_2024_NE.csv  NSUL_JAN_2024_NW.csv  NSUL_JAN_2024_SC.csv  NSUL_JAN_2024_SE.csv  NSUL_JAN_2024_SW.csv  NSUL_JAN_2024_WA.csv  NSUL_JAN_2024_WM.csv  NSUL_JAN_2024_YH.csv
