[tool.poetry]
name = "postcode-lookup-generator"
version = "0.1.0"
description = ""
authors = ["asibs <sibsvandal@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = {extras = ["binary"], version = "^3.1.17"}
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
